--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ adafruit-circuitpython-servokit==1.3.13
 adafruit-circuitpython-typing==1.9.0
 Adafruit-PlatformDetect==3.42.0
 Adafruit-PureIO==1.1.10
+Bluetin-Echo==0.2.0
+pkg-resources==0.0.0
 pyftdi==0.54.0
 pyserial==3.5
 pyusb==1.2.1
