--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,24 @@ adafruit-circuitpython-servokit==1.3.13
 adafruit-circuitpython-typing==1.9.0
 Adafruit-PlatformDetect==3.42.0
 Adafruit-PureIO==1.1.10
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
+asynctest==0.13.0
+attrs==22.2.0
 Bluetin-Echo==0.2.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+frozenlist==1.3.3
+idna==3.4
+multidict==6.0.4
 pkg-resources==0.0.0
 pyftdi==0.54.0
 pyserial==3.5
+pyTelegramBotAPI==4.10.0
 pyusb==1.2.1
+requests==2.28.2
 RPi.GPIO==0.7.1
 typing-extensions==4.5.0
+urllib3==1.26.15
+yarl==1.8.2
